--- a/index.html
+++ b/index.html
@@ -17,4 +17,66 @@
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
 </body>
+
+<body>
+	<style type = "text/css">
+
+		
+		body {
+			margin: 0;
+		}
+
+		/* NAV BAR */
+
+		.nav-bar {
+			width: 100%;
+			height: 50px;
+			margin: 0;
+			background: pink;
+
+			/* Toggle between static and sticky */
+
+			/*position: sticky;
+			top: 0; */
+		}
+
+		.nav-bar > .element {
+			width: 19.5%;
+			line-height: 50px;
+			text-align: center;
+			color: white;
+			display: inline-block;
+			margin: 0;
+			font-family: Times New Roman;
+			text-decoration: none;
+		}
+
+		.nav-bar > .element:hover { 
+  			text-decoration: underline;
+		}	
+
+
+		/* BODY */
+
+		.content {
+			width: 80%;
+			margin-left: 10%;
+		}
+	</style>
+	<div class="nav-bar">
+		<a href="nav_bar.html" class="element"> Home </a>
+		<a href="nav_bar.html" class="element"> Experience </a>
+		<a href="nav_bar.html" class="element"> References </a>
+		<a href="nav_bar.html" class="element"> Directory </a>
+		<a href="nav_bar.html" class="element"> Contact </a>
+	</div>
+
+    <center><img src="Shilika_Gehlot.jpg" alt="Shilika Gehlot"></center>
+
+
+
+	
+</body>
+
+
 </html>
