Updated website with requirements

--- a/contact.html
+++ b/contact.html
@@ -93,32 +93,6 @@
 			color: pink;
 		}
 
-		.header {
-  			padding: 20px;
-  			text-align: center;
-  			background: lightgrey;
-  			color: white;
-  			font-size: 20px;
-		}
-
-		.content {
-			padding:20px;
-			text-align: center;
-			font-size: 16px;
-		}
-
-		.footer {
-   			position: fixed;
-   			left: 0;
-   			bottom: 0;
-   			width: 100%;
-   			background-color: pink;
-   			color: white;
-   			text-align: left;
-   			padding:10px;
-		}
-
-
 
 	</style>
 	<div class="nav-bar">
@@ -138,17 +112,15 @@
 		<a href="contact.html" class="element"> Contact </a>
 	</div>
 
-	<div class="header">
-		<h1>Shilika Gehlot</h1>
-	</div>
-
-    <center><img src="Shilika_Gehlot.jpg" alt="Shilika Gehlot"></center>
-
-    <div class="footer">
-  		<a href="https://www.linkedin.com/in/shilika-gehlot-147a05155/">Linkedin</a>
-  		<a href="https://www.instagram.com/shilikagehlot/">Instagram</a>
-	</div>
-
+	<form action="mailto:shilika.gehlot@gmail.com" method="post" enctype="text/plain">
+  		First name and Last Name:<br>
+  			<input type="text" name="firstname">
+  		<br>
+  		Message:<br>
+  			<input type="text" name="message">
+  		<br><br>
+  			<input type="submit" value="Send">
+	</form> 
 
 
 	
