Final Website with all requirements

--- a/hobbies.html
+++ b/hobbies.html
@@ -107,6 +107,17 @@
 			font-size: 16px;
 		}
 
+		.footer {
+   			position: fixed;
+   			left: 0;
+   			bottom: 0;
+   			width: 100%;
+   			background-color: pink;
+   			color: white;
+   			text-align: left;
+   			padding:10px;
+		}
+
 
 	</style>
 	<div class="nav-bar">
@@ -142,6 +153,11 @@
 
 		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et elit sit amet ipsum tempor efficitur. Praesent metus metus, malesuada et nunc in, maximus dictum magna. Cras vitae porttitor tellus, ac aliquet urna. Etiam purus urna, consectetur eu quam vitae, eleifend scelerisque magna. Donec condimentum, nunc vel elementum blandit, lacus neque venenatis nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et elit sit amet ipsum tempor efficitur. Praesent metus metus, malesuada et nunc in, maximus dictum magna. Cras vitae porttitor tellus, ac aliquet urna. Etiam purus urna, consectetur eu quam vitae, eleifend scelerisque magna. Donec condimentum, nunc vel elementum blandit, lacus neque venenatis nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et elit sit amet ipsum tempor efficitur. Praesent metus metus, malesuada et nunc in, maximus dictum magna. Cras vitae porttitor tellus, ac aliquet urna. Etiam purus urna, consectetur eu quam vitae, eleifend scelerisque magna. Donec condimentum, nunc vel elementum blandit, lacus neque venenatis nisi.
 		</p>
+	</div>
+
+    <div class="footer">
+  		<a href="https://www.linkedin.com/in/shilika-gehlot-147a05155/">Linkedin</a>
+  		<a href="https://www.instagram.com/shilikagehlot/">Instagram</a>
 	</div>
 	
 </body>
