--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,17 @@
 			color: pink;
 		}
 
+		.footer {
+   			position: fixed;
+   			left: 0;
+   			bottom: 0;
+   			width: 100%;
+   			background-color: pink;
+   			color: white;
+   			text-align: left;
+   			padding:10px;
+		}
+
 
 	</style>
 	<div class="nav-bar">
@@ -117,13 +128,16 @@
   			<input type="text" name="firstname">
   		<br>
   		Message:<br>
-  			<input type="text" name="message">
+  			<input type="text" name="message" rows="4" cols="50">
   		<br><br>
   			<input type="submit" value="Send">
 	</form> 
 
+    <div class="footer">
+  		<a href="https://www.linkedin.com/in/shilika-gehlot-147a05155/">Linkedin</a>
+  		<a href="https://www.instagram.com/shilikagehlot/">Instagram</a>
+	</div>
 
-	
 </body>
 
 
